--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "1.7.7",
     "lodash": "4.17.21",
     "normalize.css": "8.0.1",
+    "prop-types": "^15.8.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
