--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "normalize.css": "8.0.1",
     "prop-types": "^15.8.1",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
